objects/LLC_BI__Covenant_Compliance__c.object
<CustomObject>
    <fields>
        <fullName>LLC_BI__Approval_Date__c</fullName>
        <description>This field is automatically calculated. Date the Covenant was approved.</description>
        <inlineHelpText>Date the Covenant was approved.</inlineHelpText>
        <label>Approval Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Approved_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is automatically calculated. User that approved the review of this Covenant</description>
        <inlineHelpText>User that approved the review of this Covenant</inlineHelpText>
        <label>Approved By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Covenant_Compliance_Approved</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Comments__c</fullName>
        <description>This field is optional. It is a text field which allows users to enter additional notes or information related to the Covenant Compliance record.</description>
        <label>Comments</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Covenant__c</fullName>
        <description>This field is required. It is automatically populated. It identifies the Covenant associated with the Covenant Compliance record and is automatically populated when creating a new Covenant Compliance.</description>
        <label>Covenant</label>
        <referenceTo>LLC_BI__Covenant__c</referenceTo>
        <relationshipLabel>Covenant Compliance</relationshipLabel>
        <relationshipName>Covenant_Compliance</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Evaluated_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is optional. It is manually populated. It identifies the user who completed the review of the associated Covenant record.</description>
        <label>Evaluated By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Covenant_Compliance</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Evaluation_Date__c</fullName>
        <description>This field is optional. It is automatically populated. It identifies the date that a Covenant Compliance record was reviewed.</description>
        <label>Evaluation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Exception_Date__c</fullName>
        <description>This field is optional. It is automatiaclly populated. It identifies the date that a Covenant Compliance record was marked as an exception, or will become an exception.</description>
        <inlineHelpText>If there was an exception, the date that the exception occurred</inlineHelpText>
        <label>Exception Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Status__c</fullName>
        <description>This field is required. It is manually populated. It identifies the Status of the Covenant Compliance record (e.g., New, Waived, Compliant, etc.).</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Compliant</fullName>
                </value>
                <value>
                    <fullName>Exception</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Waived</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Covenant Compliance</label>
    <nameField>
        <displayFormat>COVC-{00000000}</displayFormat>
        <label>Covenant Compliance Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Covenant Compliance</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>